--- a/styles.css
+++ b/styles.css
@@ -25,11 +25,8 @@
 }
 
 body {
-  background-image: var(--bg-url);
-  background-repeat: no-repeat;
-  background-position: top center;
-  background-size: cover;
-  color: var(--text-color);
+  background: var(--bg-url) no-repeat top center/cover;
+  height: 100vh;
 }
 
 body * {
@@ -165,4 +162,15 @@ ul li a:hover {
 footer {
   padding: 24px 0;
   text-align: center;
+}
+
+
+@media (min-width: 700px) {
+  :root {
+    --bg-url: url(assets/bg-mobile.jpg);
+  }
+
+  .light {
+    --bg-url: url(assets/bg-mobile-light.jpg);
+  }
 }
