--- a/apps/meditation/style.css
+++ b/apps/meditation/style.css
@@ -33,6 +33,14 @@ button {
   cursor: pointer;
 }
 
+#focus {
+  color: white;
+  text-align: center;
+  font-weight: 500;
+  font-size: 16px;
+  margin: 0;
+}
+
 .btn button {
   background-color: transparent;
   border: none;
