--- a/apps/meditation/style.css
+++ b/apps/meditation/style.css
@@ -14,11 +14,15 @@ body {
 :root {
   --main-color: black;
   --second-color: white;
+  --slider-background: #111;
+  --box-shadow-slider: rgba(0, 0, 0, 1);
 }
 
 .light {
   --main-color: white;
   --second-color: black;
+  --slider-background: rgb(245, 245, 245);
+  --box-shadow-slider: rgb(223, 223, 223);
 }
 
 label {
@@ -111,20 +115,20 @@ button {
   width: 300px;
   height: 15px;
   -webkit-appearance: none;
-  background: #111;
+  background: var(--slider-background);
   outline: none;
   border-radius: 15px;
   overflow: hidden;
-  box-shadow: inset 0 0 5px rgba(0, 0, 0, 1);
+  box-shadow: inset 0 0 5px var(--box-shadow-slider);
 }
 .range::-webkit-slider-thumb {
   -webkit-appearance: none;
   width: 15px;
   height: 15px;
   border-radius: 50%;
-  background: #000000;
+  background: var(--main-color);
   cursor: grab;
-  border: 2px solid var(--second-color);
+  border: 3px solid var(--second-color);
   box-shadow: -407px 0 0 400px var(--second-color);
 }
 
