--- a/apps/meditation/style.css
+++ b/apps/meditation/style.css
@@ -9,6 +9,8 @@ body {
   height: 85vh;
   overflow: hidden;
   user-select: none;
+  margin: 0;
+  padding: 0;
 }
 
 :root {
@@ -153,42 +155,3 @@ a:active {
   width: 304px;
 }
 
-.select {
-  padding: 6rem;  
-}
-
-#category-select label {
-  font-size: 0.75rem;
-  letter-spacing: 0.0225rem;
-}
-
-#select-button {
-  margin-top: .5rem;
-  display: flex;
-  padding: 0.75rem;
-  align-items: center;
-  justify-content: space-between;
-
-  border-radius: .375rem;
-  border: 1px solid #252529;
-  background-color: #17171A;
-}
-
-#selected-value {
-  color: #AFABB6;
-  font-size: 0.875rem;
-  letter-spacing: 0.02625rem;
-}
-
-#chevrons svg {
-  width: 1rem;
-  height: 1rem;
-}
-
-#chevrons {
-  color: #AFABB6;
-}
-
-#chevrons [data-lucide="chevron-up"] {
-  display: none;
-}
