--- a/apps/meditation/settings.css
+++ b/apps/meditation/settings.css
@@ -5,11 +5,25 @@
 
 body {
   font-family: "Poppins", sans-serif;
-  
+  color: white;
+}
+
+:root {
+  --main-color: black;
+  --second-color: white;
+  --slider-background: #111;
+  --box-shadow-slider: rgba(0, 0, 0, 1);
+}
+
+#Light {
+  --main-color: white;
+  --second-color: black;
+  --slider-background: rgb(245, 245, 245);
+  --box-shadow-slider: rgb(223, 223, 223);
 }
 
 #themes {
-  color: white;
+  color: var(--second-color);
   margin-top: 50px;
 }
 
@@ -43,7 +57,7 @@ body {
 }
 
 .selected {
-  background: #000000;
+  background: var(--main-color);
   border-radius: 8px;
   margin-bottom: 8px;
   color: #f5f6fa;
@@ -118,3 +132,15 @@ body {
   display: none;
   text-align: center;
 }
+
+#back {
+  display: flex;
+  text-decoration: none;
+  text-align: center;
+  margin-top: 0px;
+  justify-content: center;
+  color: gray;
+  
+  
+}
+
