--- a/apps/meditation/settings.css
+++ b/apps/meditation/settings.css
@@ -13,6 +13,10 @@ body {
   --second-color: white;
   --slider-background: #111;
   --box-shadow-slider: rgba(0, 0, 0, 1);
+  --select-box-bg: #101010;
+  --select-box-bg-hover: #1A1A1A;
+  --select-text: #f5f6fa;
+  --arrow: url("assets/arrow-down-white.svg");
 }
 
 #Light {
@@ -20,6 +24,36 @@ body {
   --second-color: black;
   --slider-background: rgb(245, 245, 245);
   --box-shadow-slider: rgb(223, 223, 223);
+  --select-box-bg: #efefef;
+  --select-box-bg-hover: #e2e2e2;
+  --select-text: #121212;
+  --arrow: url("assets/arrow-down-black.svg");
+}
+
+#Blue {
+  --main-color: rgb(28, 111, 255);
+  --second-color: white;
+  --slider-background: rgb(50, 125, 254);
+  --box-shadow-slider: rgb(34, 113, 250);
+  --select-box-bg: rgb(18, 89, 213);
+  --select-box-bg-hover: rgb(14, 77, 186);
+  --select-text: #f5f6fa;
+  --arrow: url("assets/arrow-down-white.svg");
+}
+
+#Green {
+  --main-color: #031916;
+  --second-color: white;
+  --slider-background: #021210;
+  --box-shadow-slider: #021412;
+  --select-box-bg: #021412;
+  --select-box-bg-hover: #02100e;
+  --select-text: #f5f6fa;
+  --arrow: url("assets/arrow-down-white.svg");
+}
+
+#theme-container {
+ /* height: 158px; */
 }
 
 #themes {
@@ -39,8 +73,8 @@ body {
 }
 
 .select-box .options-container {
-  background: #101010;
-  color: #f5f6fa;
+  background: var(--select-box-bg);
+  color: var(--select-text);
   max-height: 0;
   width: 100%;
   opacity: 0;
@@ -60,7 +94,7 @@ body {
   background: var(--main-color);
   border-radius: 8px;
   margin-bottom: 8px;
-  color: #f5f6fa;
+  color: var(--select-text);
   position: relative;
   text-align: center;
   margin-top: 45px;
@@ -70,10 +104,9 @@ body {
 
 .selected::after {
   content: "";
-  background: url("assets/arrow-down.svg");
+  background: var(--arrow);
   background-size: contain;
   background-repeat: no-repeat;
-
 
   position: absolute;
   height: 100%;
@@ -81,7 +114,6 @@ body {
   right: 5px;
   top: 7px;
 
-  fill: rgb(255, 0, 0);
   
 
   transition: all 0.4s;
@@ -100,13 +132,13 @@ body {
 
 .select-box .options-container::-webkit-scrollbar {
   width: 8px;
-  background: #101010;
+  background: var(--select-box-bg);
   border-radius: 0 8px 8px 0;
   display: none;
 }
 
 .select-box .options-container::-webkit-scrollbar-thumb {
-  background: #000000;
+  background: var(--main-color);
   border-radius: 0 8px 8px 0;
 }
 
@@ -118,7 +150,7 @@ body {
 }
 
 .select-box .option:hover {
-  background: #1a1a1a;
+  background: var(--select-box-bg-hover);
 }
 
 .select-box label {
@@ -139,8 +171,7 @@ body {
   text-align: center;
   margin-top: 0px;
   justify-content: center;
-  color: gray;
-  
-  
+  color: rgb(219, 219, 219);
+  bottom: 10px;
+  z-index: 0;
 }
-
