--- a/apps/meditation/style.css
+++ b/apps/meditation/style.css
@@ -18,6 +18,10 @@ body {
   --second-color: white;
   --slider-background: #111;
   --box-shadow-slider: rgba(0, 0, 0, 1);
+  --select-box-bg: #101010;
+  --select-box-bg-hover: #1A1A1A;
+  --select-text: #f5f6fa;
+  --arrow: url("assets/arrow-down-white.svg");
 }
 
 #Light {
@@ -25,6 +29,32 @@ body {
   --second-color: black;
   --slider-background: rgb(245, 245, 245);
   --box-shadow-slider: rgb(223, 223, 223);
+  --select-box-bg: #efefef;
+  --select-box-bg-hover: #e2e2e2;
+  --select-text: #121212;
+  --arrow: url("assets/arrow-down-black.svg");
+}
+
+#Blue {
+  --main-color: rgb(28, 111, 255);
+  --second-color: white;
+  --slider-background: rgb(50, 125, 254);
+  --box-shadow-slider: rgb(34, 113, 250);
+  --select-box-bg: rgb(18, 89, 213);
+  --select-box-bg-hover: rgb(14, 77, 186);
+  --select-text: #f5f6fa;
+  --arrow: url("assets/arrow-down-white.svg");
+}
+
+#Green {
+  --main-color: #031916;
+  --second-color: white;
+  --slider-background: #021210;
+  --box-shadow-slider: #021412;
+  --select-box-bg: rgb(18, 89, 213);
+  --select-box-bg-hover: rgb(14, 77, 186);
+  --select-text: #f5f6fa;
+  --arrow: url("assets/arrow-down-white.svg");
 }
 
 label {
