--- a/apps/meditation/settings.css
+++ b/apps/meditation/settings.css
@@ -14,7 +14,7 @@ body {
   --slider-background: #111;
   --box-shadow-slider: rgba(0, 0, 0, 1);
   --select-box-bg: #101010;
-  --select-box-bg-hover: #1A1A1A;
+  --select-box-bg-hover: #1a1a1a;
   --select-text: #f5f6fa;
   --arrow: url("assets/arrow-down-white.svg");
 }
@@ -53,7 +53,7 @@ body {
 }
 
 #theme-container {
- /* height: 158px; */
+  height: 228px;
 }
 
 #themes {
@@ -113,8 +113,6 @@ body {
   width: 20px;
   right: 5px;
   top: 7px;
-
-  
 
   transition: all 0.4s;
 }
