--- a/apps/meditation/settings.css
+++ b/apps/meditation/settings.css
@@ -79,7 +79,26 @@ body {
   flex-direction: column;
 }
 
+.select-box-styles {
+  display: flex;
+  width: 100px;
+  flex-direction: column;
+}
+
 .select-box .options-container-themes {
+  background: var(--select-box-bg);
+  color: var(--select-text);
+  max-height: 0;
+  width: 100%;
+  opacity: 0;
+  transition: all 0.4s;
+  border-radius: 8px;
+  overflow: hidden;
+
+  order: 1;
+}
+
+.select-box-styles .options-container-themes {
   background: var(--select-box-bg);
   color: var(--select-text);
   max-height: 0;
@@ -105,7 +124,33 @@ body {
   order: 1;
 }
 
+.select-box-styles .options-container-styles {
+  background: var(--select-box-bg);
+  color: var(--select-text);
+  max-height: 0;
+  width: 100%;
+  opacity: 0;
+  transition: all 0.4s;
+  border-radius: 8px;
+  overflow: hidden;
+
+  order: 1;
+}
+
 .select-box .options-container-sounds {
+  background: var(--select-box-bg);
+  color: var(--select-text);
+  max-height: 0;
+  width: 100%;
+  opacity: 0;
+  transition: all 0.4s;
+  border-radius: 8px;
+  overflow: hidden;
+
+  order: 1;
+}
+
+.select-box-styles .options-container-sounds {
   background: var(--select-box-bg);
   color: var(--select-text);
   max-height: 0;
@@ -207,10 +252,13 @@ body {
   overflow-y: scroll;
 }
 
+
 .select-box .options-container-themes.active + .selected-theme::after {
   transform: rotateX(180deg);
   top: -6px;
 }
+
+
 
 .select-box .options-container-themes::-webkit-scrollbar {
   width: 8px;
@@ -219,30 +267,33 @@ body {
   display: none;
 }
 
+
 .select-box .options-container-themes::-webkit-scrollbar-thumb {
   background: var(--main-color);
   border-radius: 0 8px 8px 0;
 }
 
-.select-box .options-container-styles.active {
+.select-box-styles .options-container-styles.active {
   max-height: 240px;
   opacity: 1;
   overflow-y: scroll;
 }
 
-.select-box .options-container-styles.active + .selected-theme::after {
+
+
+.select-box-styles .options-container-styles.active + .selected-theme::after {
   transform: rotateX(180deg);
   top: -6px;
 }
 
-.select-box .options-container-styles::-webkit-scrollbar {
+.select-box-styles .options-container-styles::-webkit-scrollbar {
   width: 8px;
   background: var(--select-box-bg);
   border-radius: 0 8px 8px 0;
   display: none;
 }
 
-.select-box .options-container-styles::-webkit-scrollbar-thumb {
+.select-box-styles .options-container-styles::-webkit-scrollbar-thumb {
   background: var(--main-color);
   border-radius: 0 8px 8px 0;
 }
@@ -271,13 +322,24 @@ body {
 }
 
 .select-box .option,
-.selected-theme, .selected-sound, .selected-style {
+.selected-theme {
+  padding: 5px 24px;
+  cursor: pointer;
+  text-align: center;
+}
+
+.select-box-styles .style-option,
+.selected-style {
   padding: 5px 24px;
   cursor: pointer;
   text-align: center;
 }
 
 .select-box .option:hover {
+  background: var(--select-box-bg-hover);
+}
+
+.select-box-styles .style-option:hover {
   background: var(--select-box-bg-hover);
 }
 
@@ -288,9 +350,26 @@ body {
   padding-left: 0;
 }
 
+.select-box-styles label {
+  cursor: pointer;
+  font-size: 14px;
+  text-align: center;
+  padding-left: 0;
+}
+
 .select-box .option .radio {
   display: none;
   text-align: center;
+}
+
+.select-box-styles .option-style .radio {
+  display: none;
+  text-align: center;
+}
+
+
+.radio {
+  display: none;
 }
 
 #back {
