--- a/apps/meditation/style.css
+++ b/apps/meditation/style.css
@@ -82,6 +82,7 @@ button {
 
 .time-btns {
   justify-content: center;
+  height: 32px;
 }
 
 .time-btns a {
@@ -244,4 +245,35 @@ a:active {
 
 #custom-timer-input {
   display: none;
+  width: 50px;
+  
+  text-align: center;
+  text-decoration: none;
+  background-color: #111;
+  color: white;
+  border: none;
+  border-radius: 50px;
+  font-family: 'Poppins', sans-serif;
+  font-weight: 500;
+}
+
+/* Chrome, Safari, Edge, Opera */
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+#confirm-timer {
+  display: none;
+}
+
+#minus {
+  display: none;
+  margin-left: 90px;
+}
+
+#plus {
+  display: none;
+  margin-right: 40px;
 }
