--- a/apps/palindrome/style.css
+++ b/apps/palindrome/style.css
@@ -9,4 +9,9 @@ body {
   justify-content: center;
   align-items: center;
   text-align: center;
+  margin-left: 300px;
+  height: 200px;
+  width: 200px;
+  padding-left: 200px;
 }
+
